# enterprise-rag-assistant

./: .dockerignore  .gitignore  CASE_STUDY.md  DOCKER.md  Dockerfile  EVALUATION_REPORT.md  PROJECT_SUMMARY.md  README.md  config.yaml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml  docker_build.yml
api/: main.py  routes.py  schema.py
app/: streamlit_app.py
docs/: INTERVIEW_QA.md  architecture.md  evaluation.md
evaluation/: run_evals.py  test_questions.csv
src/: config_loader.py  document_loader.py  embeddings.py  exception.py  feedback_analytics.py  feedback_db.py  llm.py  logger.py  pipeline.py  query_expansion.py  query_router.py  rag_chain.py  reranker.py  retriever.py  tabular_query_engine.py  text_splitter.py  vector_store.py
tests/: README.md  e2e_test_cases.csv  test_e2e.py
