[project]
name = "enterprise-rag-assistant"
version = "1.0.0"
description = "Enterprise RAG Assistant with Hybrid Search, Query Expansion, Cross-Encoder Reranking and Pandas Analytics Engine"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain==1.3.9",
    "langchain-core==1.4.6",
    "langchain-community==0.4.2",
    "langchain-text-splitters==1.1.2",
    "langchain-groq==1.1.3",
    "langchain-huggingface==1.1.0",
    "langchain-chroma==1.0.0",

    "chromadb==1.0.20",
    "sentence-transformers==4.1.0",
    "transformers==4.52.4",
    "huggingface-hub==0.36.0",
    "rank-bm25==0.2.2",

    "fastapi==0.115.9",
    "uvicorn==0.34.0",
    "streamlit==1.41.1",
    "requests==2.32.5",

    "pandas==2.2.3",
    "numpy==1.26.4",

    "pypdf==5.6.0",
    "python-docx==1.1.2",
    "openpyxl==3.1.5",
    "xlrd==2.0.1",

    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "pydantic==2.10.4",

    "psycopg2-binary==2.9.10",
    "sqlalchemy==2.0.41",
]
